<resources>
    <string name="app_name">India fights Covid</string>
    <string name="title_covid_19">Covid 19</string>
    <string name="title_news">News</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_suggestions">Suggestions</string>
    <string name="text_fragment_home_vaccinations_radio_button">Vaccinations</string>
    <string name="text_fragment_home_cases_radio_button">Cases</string>
    <string name="name_vaccinations_bot_nav">Vaccinations</string>
    <string name="app_slogan">Made with love for India</string>
    <string name="about_app">India fights Covid App provides latest data about covid cases and vaccinations.<br />It also provide trending news related to health,covid and allows to share your view and suggestions regrading this pandemic.</string>
    <string name="news_image_view_description">News Image Description</string>
    <string name="back_button">back button</string>
    <string name="button_view_on_web_text">View on Web</string>
    <string name="home_radio_button_1_text">Home</string>
    <string name="Home_radio_button_second_text">State wise data</string>
    <string name="home_quote_text">Where convention fails, innovation can help. This has been seen during the COVID-19 global pandemic, which is the biggest disruption of our age.</string>
    <string name="home_quote_by_text">- PM NARENDRA MODI</string>
    <string name="total_cases_text">Total Cases</string>
    <string name="total_recovered_text">Total Recovered</string>
    <string name="total_deaths_text">Total Deaths</string>
    <string name="new_cases_text">New Cases</string>
    <string name="new_recovered_text">New Recovered</string>
    <string name="active_cases_text">Active Cases :</string>
    <string name="helpline_numbers_text">Helpline Numbers</string>
    <string name="health_ministry_helpline_text">Health Ministry Helpline</string>
    <string name="health_ministry_helpline_number_text">1075</string>
    <string name="senior_citizens_helpline_text">Senior Citizens Helpline</string>
    <string name="senior_citizens_helpline_number_text">14567</string>
    <string name="mental_health_helpline_text">Mental Health Helpline</string>
    <string name="mental_health_helpline_number_text">08046110007</string>
    <string name="ayush_covid_19_counselling_helpline_text">Ayush Covid-19 Counselling Helpline</string>
    <string name="ayush_covid_19_counselling_helpline_number_text">14443</string>
    <string name="call_button_image_content_description">Call Button Image</string>
    <string name="write_your_suggestions_here_edit_text_hint">Write your suggestions here</string>
    <string name="post_button_text">POST</string>
    <string name="user_image_content_description">User Image</string>
    <string name="like_button_content_description">Like button Image</string>
    <string name="disliked_button_image_content_description">Disliked Button Image</string>
    <string name="default_liked_disliked_number_text">0</string>
    <string name="total_first_dose_name_text">Total First Dose</string>
    <string name="total_second_dose_name_text">Total Second Dose</string>
    <string name="total_doses_given_yesterday_name_text">Total Doses Given Yesterday</string>
    <string name="state_name_text">State Name</string>
    <string name="first_dose_name_text">1st dose</string>
    <string name="second_dose_name_text">2nd dose</string>
    <string name="title_home">Home</string>
    <string name="title_about_us">About Us</string>
    <string name="title_log_out">Log Out</string>

</resources>