<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:labelVisibilityMode="labeled">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_covid_19" />
    <item
        android:id="@+id/navigation_vaccinations"
        android:icon="@drawable/baseline_vaccines"
        android:title="@string/name_vaccinations_bot_nav"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_news_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_suggestion"
        android:icon="@drawable/ic_suggestions_24"
        android:title="@string/title_suggestions"/>

</menu>