<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.VaccinationsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_all_india_vaccine_data"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="#008000"
            android:layout_margin="5dp"
            android:background="@drawable/drawable_vaccinations_all_india_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_state_wise_data_view">

            <LinearLayout
                android:id="@+id/ll_total_first_dose_vaccination_fragment"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:gravity="center"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ll_total_second_dose_vaccination_fragment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/ll_total_doses_in_last_day"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/total_first_dose_name_text"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_all_india_first_dose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="12345"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_total_second_dose_vaccination_fragment"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/ll_total_first_dose_vaccination_fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/ll_total_doses_in_last_day"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/total_second_dose_name_text"/>
                <TextView
                    android:id="@+id/tv_all_india_second_dose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="12345"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_total_doses_in_last_day"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_total_second_dose_vaccination_fragment"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/total_doses_given_yesterday_name_text"/>
                <TextView
                    android:id="@+id/tv_all_india_total_doses_yesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="12345"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_state_wise_data_view"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_all_india_vaccine_data"
            app:layout_constraintBottom_toTopOf="@id/rv_vaccinations"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:baselineAligned="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/state_name_text"/>
            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="end"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_dose_name_text"/>
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_dose_name_text"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vaccinations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_state_wise_data_view"/>

        <ProgressBar
            android:id="@+id/progress_bar_vaccinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progress="50"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>