<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.NewsDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/iv_news_detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_news_detail_title"
            android:contentDescription="@string/news_image_view_description" />

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_margin="10dp"
            android:layout_width="25dp"
            android:layout_height="24dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_news_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Title"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_news_detail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_news_detail_description"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/tv_news_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tv_news_detail_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_news_detail_content"/>

        <TextView
            android:id="@+id/tv_news_detail_content"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="content"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tv_news_detail_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_publishedAt"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="published at"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_news_detail_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_view_on_web"/>

        <Button
            android:id="@+id/btn_view_on_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_view_on_web_text"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/drawable_grey_rectangle_background"
            app:layout_constraintTop_toBottomOf="@id/tv_publishedAt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>